force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/HRCSVC_Maintenance_Plan_Template__c.object-meta.xml
<CustomObject>
    <label>Maintenance Plan Template</label>
    <nameField>
        <label>Maintenance Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Plan Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>