force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Auto_generate_work_orders__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Auto_generate_work_orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-generate work orders</label>
    <type>Checkbox</type>
</CustomField>