force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Frequency__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Frequency__c</fullName>
    <label>Frequency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>