force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>