force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Generate_new_batch_upon_completn__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Generate_new_batch_upon_completn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate new batch upon completion</label>
    <type>Checkbox</type>
</CustomField>