force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Generation_Horizon_Days__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Generation_Horizon_Days__c</fullName>
    <label>Generation Horizon (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>