force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Generation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Generation_Timeframe__c</fullName>
    <label>Generation Timeframe</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>