force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Maintenance_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Maintenance_Window_Start__c</fullName>
    <label>Maintenance Window Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>