force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Offset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Offset__c</fullName>
    <inlineHelpText>How many months after the start date the first work order should be due.</inlineHelpText>
    <label>Offset (Months)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>