force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Model__c</fullName>
    <label>Product Model</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>