force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>HRCSVC_Service_Package__c</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>