force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Service_Package_Coverage__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package_Coverage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Package Coverage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HRCSVC_Service_Package_Coverage__c.HRCSVC_Service_Package__c</field>
            <operation>equals</operation>
            <valueField>$Source.HRCSVC_Service_Package__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HRCSVC_Service_Package_Coverage__c</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>