force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/fields/HRCSVC_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>