force-app/main/default/objects/HRCSVC_Maintenance_Plan_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCSVC_Service_Package__c</columns>
    <columns>HRCSVC_Service_Package_Coverage__c</columns>
    <columns>HRCSVC_Product_Model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HRCSVC_Product_Model__c</field>
        <operation>equals</operation>
        <value>90960</value>
    </filters>
    <label>All</label>
</ListView>